fixed scaling issue on smaller displays
next fix should hopefully be for mobile

--- a/css.css
+++ b/css.css
@@ -46,8 +46,8 @@
 					}
 			
 			.left {
-					width:300;
-					height:250;
+					width:100%;
+					height:100%;
 			}
 			.table {
 					background-color:black;
@@ -55,8 +55,8 @@
 					position:absolute;
 						}
 			.steam {
-					width:489;
-					height:257;
+					width:20%;
+					height:20%;
 					background-color:black;
 					margin-left:auto;
 					margin-right:auto;
